--- a/locales/es/Navbar.json
+++ b/locales/es/Navbar.json
@@ -1,1 +1,1 @@
-{"about":"Acerca de mí","contact":"Contacto","home":"Hogar","services":"Servicios","work":"Mi trabajo"}
+{"about":"Acerca de mí","contact":"Contacto","home":"Inicio","services":"Servicios","work":"Mis trabajos"}
